# medlife-connect-b5f64714

./: .dockerignore  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml  index.html  nohup.out  pyproject.toml  tailwind.config.js  tailwind.config.ts  test_genai.py  vite.config.ts
.claude/: launch.json
agents/: agent.py
agents/booking/: __init__.py  agent.py  tools.py
agents/exercise/: agent.py  tools.py
agents/guardian/: __init__.py  agent.py  tools.py
agents/insights/: __init__.py  agent.py  tools.py
agents/interpreter/: __init__.py  agent.py  tools.py
agents/onboarding/: agent.py  tools.py
agents/shared/: constants.py  drug_service.py  firestore_service.py  mock_data.py  prompts.py  tasks_service.py  ui_tools.py
app/: main.py
app/api/: avatar.py  calling.py  family.py  food.py  medications.py  reminders.py  scan.py
app/static/: auth.html  dashboard.html  firebase-messaging-sw.js  index.html  onboarding.html
infra/: cloud_run.tf  firestore.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  variables.tf
public/: audio-processor.js
scripts/: deploy.sh  quick_deploy.sh  seed_firestore.py  setup_gcp.sh  test_live_api.py
src/: App.tsx  index.css
src/components/: AppLayout.tsx  AppSidebar.tsx  StatCard.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useUIEventStore.ts  useVoiceGuardian.ts
src/lib/: api.ts  firebase.ts  personas.ts  voiceConfig.ts
src/pages/: Dashboard.tsx  DoctorBooking.tsx  Exercise.tsx  FamilyDashboard.tsx  FoodLog.tsx  Login.tsx  Onboarding.tsx  PillCheck.tsx  (+4 more)
tests/: test_tools.py
(+7 files in other folders)
